# Search_Engine

./: CMakeLists.txt  README.md  Resources.qrc
Answers/: answers.json
Config/: config.json
Resources/: file001.txt  file002.txt  file003.txt  file004.txt
Tests/: CMakeLists.txt  InverterIndexTest.cpp  SearchServerTest.cpp
filesJSON/: config.json  requests.json
helpWindow/: CMakeLists.txt  helpwindow.cpp  helpwindow.h  helpwindow.ui
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
mainWindow/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
